--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "daisyui": "^5.5.5",
+    "firebase": "^12.6.0",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.0",
     "react-icon": "^1.0.0",
     "react-leaflet": "^5.0.0-rc.2",
     "react-responsive-carousel": "^3.2.23",
