--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
     "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0-rc.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.9.6",
